Ignore doc changes to bbl-develop.
Signed-off-by: Rowan Jacobs <rojacobs@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -66,6 +66,9 @@ resources:
   source:
     branch: develop
     uri: https://github.com/cloudfoundry/bosh-bootloader.git
+    ignore_paths:
+    - ./**/*.md
+    - docs
 
 - name: bosh-bootloader-master
   type: git
